@@ -457,7 +457,7 @@ bool    getSwitch(int8_t swtch, bool nc, uint8_t level=0);
 ///   \param att   NO_INV,INVERS,BLINK
 ///
 void putsDrSwitches(uint8_t x,uint8_t y,int8_t swtch,uint8_t att);
-void putsTmrMode(uint8_t x, uint8_t y, uint8_t attr);
+void putsTmrMode(uint8_t x, uint8_t y, uint8_t attr, uint8_t type);
 
 extern uint8_t  s_timerState;
 #define TMR_OFF     0
