@@ -225,7 +225,8 @@ typedef struct t_ModelData {
     int8_t    curves9[MAX_CURVE9][9];
     CSwData   customSw[NUM_CSW];
     uint8_t   frSkyVoltThreshold ;
-    uint8_t   res3[2];
+    int8_t		tmrModeB;
+    uint8_t   res3;
     SafetySwData  safetySw[NUM_CHNOUT];
     FrSkyData frsky;
 } __attribute__((packed)) ModelData;
